--- a/site.html
+++ b/site.html
@@ -170,7 +170,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <p class="hero-sub">Your comprehensive destination for research peptide resources, education, and premium products</p>
 <div class="hero-stats">
 <span><strong>44+</strong> Products</span>
-<span><strong>325</strong> Vendors Reviewed</span>
+<span><strong>382</strong> Vendors Reviewed</span>
 <span><strong>10</strong> Categories</span>
 <span><strong>&ge;98%</strong> Purity</span>
 </div>
@@ -201,7 +201,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 </div>
 
 <div class="quick-grid">
-<label for="tab-vendors" class="quick-tile"><h4>Vendor Directory</h4><p>326 vendors reviewed</p></label>
+<label for="tab-vendors" class="quick-tile"><h4>Vendor Directory</h4><p>382 vendors reviewed</p></label>
 <label for="tab-learn" class="quick-tile"><h4>Peptide Education</h4><p>Learn the science</p></label>
 <a href="#review-resources" class="quick-tile" onclick="document.getElementById('review-resources').scrollIntoView({behavior:'smooth'});return false"><h4>Vendor Reviews</h4><p>Community feedback</p></a>
 <a href="#testing-labs" class="quick-tile" onclick="document.getElementById('testing-labs').scrollIntoView({behavior:'smooth'});return false"><h4>Testing Labs</h4><p>Third-party analysis</p></a>
@@ -291,14 +291,14 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <p style="margin-bottom:12px;font-size:0.68rem;color:#94a3b8;font-style:italic">Last reviewed: February 2026. Vendor status may change. Always conduct your own due diligence before purchasing. Think a listing needs updating? Contact us.</p>
 <div class="vendor-controls">
 <div class="vendor-filter-pills">
-<button class="v-pill active" onclick="filterVendors(this,'all')">All (325)</button>
-<button class="v-pill" onclick="filterVendors(this,'green')" style="--v-color:#10B981">Green (53)</button>
+<button class="v-pill active" onclick="filterVendors(this,'all')">All (382)</button>
+<button class="v-pill" onclick="filterVendors(this,'green')" style="--v-color:#10B981">Green (110)</button>
 <button class="v-pill" onclick="filterVendors(this,'yellow')" style="--v-color:#EAB308">Yellow (108)</button>
 <button class="v-pill" onclick="filterVendors(this,'orange')" style="--v-color:#F97316">Orange (25)</button>
 <button class="v-pill" onclick="filterVendors(this,'red')" style="--v-color:#EF4444">Red (139)</button>
 </div>
 <input type="text" class="vendor-search" id="vendorSearch" placeholder="Search vendors...">
-<div class="vendor-count" id="vendorCount">Showing 325 vendors</div>
+<div class="vendor-count" id="vendorCount">Showing 382 vendors</div>
 </div>
 <div style="background:linear-gradient(135deg,#0A1628 0%,#1a2744 100%);border-radius:10px;padding:20px;margin-bottom:16px;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px">
 <div>
@@ -308,6 +308,62 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <label for="tab-shop" style="background:#2B7DE9;color:#fff;border:none;padding:8px 20px;border-radius:8px;font-size:0.78rem;font-weight:700;cursor:pointer;white-space:nowrap">Shop Our Products →</label>
 </div>
 <div class="vendor-list" id="vendorList"><div class="vendor-row" data-tier="green" data-name="flawless compounds"><div class="vendor-name">Flawless Compounds</div><span class="vendor-tier" style="color:#10B981">Green/span></div>
+<div class="vendor-row" data-tier="green" data-name="altera science"><div class="vendor-name">Altera Science</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="ameano peptides (amp)"><div class="vendor-name">Ameano Peptides (AMP)</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-aff">Code: KIKIRIKI</div></div>
+<div class="vendor-row" data-tier="green" data-name="ascension peptides"><div class="vendor-name">Ascension Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-aff">Code: Kikiriki</div></div>
+<div class="vendor-row" data-tier="green" data-name="atomik labz"><div class="vendor-name">Atomik Labz</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Requires account to purchase</div></div>
+<div class="vendor-row" data-tier="green" data-name="bachem"><div class="vendor-name">Bachem</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Large lab</div></div>
+<div class="vendor-row" data-tier="green" data-name="biolongevity labs"><div class="vendor-name">Biolongevity Labs</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="bioscience peptides"><div class="vendor-name">Bioscience Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="biopeptitech"><div class="vendor-name">BioPeptiTech</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-aff">Code: Kikiriki</div></div>
+<div class="vendor-row" data-tier="green" data-name="bulk peptides"><div class="vendor-name">Bulk Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Requires registration, bulk sales only</div></div>
+<div class="vendor-row" data-tier="green" data-name="candor chemicals"><div class="vendor-name">Candor Chemicals</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="coastal peptides"><div class="vendor-name">Coastal Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="ez peptides"><div class="vendor-name">Ez Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="empower peptides"><div class="vendor-name">Empower Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-aff">Code: affyesenia10</div></div>
+<div class="vendor-row" data-tier="green" data-name="eternal peptides"><div class="vendor-name">Eternal Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="felix chem"><div class="vendor-name">Felix Chem</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="fusion peptide"><div class="vendor-name">Fusion Peptide</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="good life peptides"><div class="vendor-name">Good Life Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="hvy research"><div class="vendor-name">HVY Research</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="hydroresearch peptides"><div class="vendor-name">Hydroresearch Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="limitless biotech"><div class="vendor-name">Limitless Biotech</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="happy peptides"><div class="vendor-name">Happy Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="mob peptides"><div class="vendor-name">Mob Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="modern peptides"><div class="vendor-name">Modern Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="modern research peptides"><div class="vendor-name">Modern Research Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-aff">Code: KIRKPRC</div></div>
+<div class="vendor-row" data-tier="green" data-name="next tech laboratories"><div class="vendor-name">Next Tech Laboratories</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Requires registration</div></div>
+<div class="vendor-row" data-tier="green" data-name="pacific wave peptides"><div class="vendor-name">Pacific Wave Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="paramount peptides"><div class="vendor-name">Paramount Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="pekcura labs"><div class="vendor-name">Pekcura Labs</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="pen peptide usa"><div class="vendor-name">Pen Peptide USA</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Pre-filled pen cartridges</div></div>
+<div class="vendor-row" data-tier="green" data-name="pep4life"><div class="vendor-name">Pep4Life</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="peptide crafters"><div class="vendor-name">Peptide Crafters</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="peptide sciences"><div class="vendor-name">Peptide Sciences</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="peptide source canada"><div class="vendor-name">Peptide Source Canada</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Canadian vendor</div></div>
+<div class="vendor-row" data-tier="green" data-name="peptide technologies"><div class="vendor-name">Peptide Technologies</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="peptira"><div class="vendor-name">Peptira</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="peptronix"><div class="vendor-name">Peptronix</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="pura peptides"><div class="vendor-name">Pura Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="pure health peptides"><div class="vendor-name">Pure Health Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="pure life peptides"><div class="vendor-name">Pure Life Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="pure peptides"><div class="vendor-name">Pure Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="pure lab peptides"><div class="vendor-name">Pure Lab Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="ruo bio"><div class="vendor-name">RUO Bio</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="science bio"><div class="vendor-name">Science Bio</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="sj peptides"><div class="vendor-name">SJ Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="skye peptides"><div class="vendor-name">Skye Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="snappy peptides"><div class="vendor-name">Snappy Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="solution peptides"><div class="vendor-name">Solution Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="southern aminos"><div class="vendor-name">Southern Aminos</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="strate labs"><div class="vendor-name">Strate Labs</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="synthesis peptides"><div class="vendor-name">Synthesis Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="the peptique"><div class="vendor-name">The Peptique</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="tydes"><div class="vendor-name">Tydes</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-aff">Code: REFYESENIACA</div></div>
+<div class="vendor-row" data-tier="green" data-name="uae peptides"><div class="vendor-name">UAE Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Limitless parent company</div></div>
+<div class="vendor-row" data-tier="green" data-name="v peptide"><div class="vendor-name">V Peptide</div><span class="vendor-tier" style="color:#10B981">Green</span><div class="vendor-notes">Canadian vendor</div></div>
+<div class="vendor-row" data-tier="green" data-name="valor peptides"><div class="vendor-name">Valor Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
+<div class="vendor-row" data-tier="green" data-name="verified peptides"><div class="vendor-name">Verified Peptides</div><span class="vendor-tier" style="color:#10B981">Green</span></div>
 <div class="vendor-row" data-tier="green" data-name="frozen peptides"><div class="vendor-name">Frozen Peptides</div><span class="vendor-tier" style="color:#10B981">Green/span></div>
 <div class="vendor-row" data-tier="green" data-name="genetic peptide"><div class="vendor-name">Genetic Peptide</div><span class="vendor-tier" style="color:#10B981">Green/span></div>
 <div class="vendor-row" data-tier="green" data-name="gentleman peptides"><div class="vendor-name">Gentleman Peptides</div><span class="vendor-tier" style="color:#10B981">Green/span></div>
