--- a/prc_site_mockup_final.html
+++ b/prc_site_mockup_final.html
@@ -288,7 +288,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <div style="padding:10px 14px;border-left:4px solid #F97316;background:#fff7ed;border-radius:0 6px 6px 0"><strong style="color:#F97316">Orange</strong> <span style="color:#475569">— Vendors in this category raised some flags for us and we recommend extra caution until new information is available.</span></div>
 <div style="padding:10px 14px;border-left:4px solid #EF4444;background:#fef2f2;border-radius:0 6px 6px 0"><strong style="color:#EF4444">Red</strong> <span style="color:#475569">— Vendors we would avoid due to lack of information on their website, negative reviews from the general community, or bad experiences. We always try to update our listings and if they change the info on their sites we will adjust their status accordingly.</span></div>
 </div>
-<p style="margin-bottom:12px;font-size:0.68rem;color:#94a3b8;font-style:italic">Last reviewed: February 2026. Vendor status may change. Always conduct your own due diligence before purchasing. Think a listing needs updating? Contact us.</p>
+<p style="margin-bottom:12px;font-size:0.68rem;color:#94a3b8;font-style:italic">Last reviewed: February 2026. Vendor status may change. Always conduct your own due diligence before purchasing. Think a listing needs updating? <a href="mailto:support@prcpeptides.com" style="color:#2B7DE9;text-decoration:underline">Contact us</a>.</p>
 <div class="vendor-controls">
 <div class="vendor-filter-pills">
 <button class="v-pill active" onclick="filterVendors(this,'all')">All (382)</button>
