--- a/prc_site_mockup_final.html
+++ b/prc_site_mockup_final.html
@@ -288,7 +288,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <div style="padding:10px 14px;border-left:4px solid #F97316;background:#fff7ed;border-radius:0 6px 6px 0"><strong style="color:#F97316">Orange</strong> <span style="color:#475569">— Vendors in this category raised some flags for us and we recommend extra caution until new information is available.</span></div>
 <div style="padding:10px 14px;border-left:4px solid #EF4444;background:#fef2f2;border-radius:0 6px 6px 0"><strong style="color:#EF4444">Red</strong> <span style="color:#475569">— Vendors we would avoid due to lack of information on their website, negative reviews from the general community, or bad experiences. We always try to update our listings and if they change the info on their sites we will adjust their status accordingly.</span></div>
 </div>
-<p style="margin-bottom:12px;font-size:0.68rem;color:#94a3b8;font-style:italic">Last reviewed: February 2026. Vendor status may change. Always conduct your own due diligence before purchasing. Think a listing needs updating? <a href="mailto:support@prcpeptides.com" style="color:#2B7DE9;text-decoration:underline">Contact us</a>.</p>
+<p style="margin-bottom:12px;font-size:0.68rem;color:#94a3b8;font-style:italic">Last reviewed: February 2026. Vendor status may change. Always conduct your own due diligence before purchasing. Think a listing needs updating? <a href="mailto:contact@peptideresourcecenter.com" style="color:#2B7DE9;text-decoration:underline">Contact us</a>.</p>
 <div class="vendor-controls">
 <div class="vendor-filter-pills">
 <button class="v-pill active" onclick="filterVendors(this,'all')">All (382)</button>
@@ -782,7 +782,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <div class="contact-wrap">
 <h3>Get in Touch</h3>
 <p>Have questions about our research products or need guidance on peptide selection for your laboratory? Our team is here to help.</p>
-<p><a href="mailto:support@prcpeptides.com">support@prcpeptides.com</a></p>
+<p><a href="mailto:contact@peptideresourcecenter.com">contact@peptideresourcecenter.com</a></p>
 <p><a href="https://www.facebook.com/prcpeptides" target="_blank" rel="noopener">Follow us on Facebook</a></p>
 <div class="contact-disc">All products are intended for research and laboratory use only. Not for human consumption. No medical claims are made or implied. Products have not been evaluated by regulatory agencies for safety or efficacy in humans.</div>
 </div>
