--- a/prc_site_mockup_final.html
+++ b/prc_site_mockup_final.html
@@ -947,30 +947,34 @@ var contentClasses = ["content-resources","content-vendors","content-shop","cont
 function switchTab(id) {
   var radio = document.getElementById(id);
   if (radio) radio.checked = true;
-  for (var i = 0; i < contentClasses.length; i++) {
-    var el = document.querySelector("." + contentClasses[i]);
-    if (el) el.setAttribute("style", (contentClasses[i] === "content-" + id.replace("tab-","")) ? "display:block !important" : "display:none !important");
+  var allContent = document.querySelectorAll(".tab-content");
+  for (var i = 0; i < allContent.length; i++) {
+    allContent[i].style.cssText = "display:none !important";
   }
-  var labels = document.querySelectorAll(".tab-bar label");
-  for (var j = 0; j < labels.length; j++) {
-    var f = labels[j].getAttribute("for");
-    labels[j].style.color = (f === id) ? "#2B7DE9" : "";
-    labels[j].style.borderBottomColor = (f === id) ? "#2B7DE9" : "";
+  var target = document.querySelector(".content-" + id.replace("tab-",""));
+  if (target) target.style.cssText = "display:block !important";
+  var barLabels = document.querySelectorAll(".tab-bar label");
+  for (var j = 0; j < barLabels.length; j++) {
+    var f = barLabels[j].getAttribute("for");
+    barLabels[j].style.color = (f === id) ? "#2B7DE9" : "";
+    barLabels[j].style.borderBottomColor = (f === id) ? "#2B7DE9" : "";
   }
   window.scrollTo(0,0);
 }
-var allLabels = document.querySelectorAll("label[for^='tab-']");
-for (var li = 0; li < allLabels.length; li++) {
-  (function(lbl) {
-    lbl.addEventListener("click", function(e) {
-      var f = lbl.getAttribute("for");
-      if (f && f.indexOf("tab-") === 0) {
-        e.preventDefault();
-        switchTab(f);
-      }
-    });
-  })(allLabels[li]);
-}
+// Attach to ALL labels with tab- targets
+document.addEventListener("click", function(e) {
+  var el = e.target;
+  while (el && el.tagName !== "LABEL") el = el.parentElement;
+  if (!el) return;
+  var f = el.getAttribute("for");
+  if (f && f.indexOf("tab-") === 0) {
+    e.preventDefault();
+    e.stopPropagation();
+    switchTab(f);
+  }
+});
+// Init: show resources tab
+switchTab("tab-resources");
 
 </script>
 </body>
