Fix unclosed vendor divs - Shop/Learn/Contact were nested inside Vendors

--- a/prc_site_mockup_final.html
+++ b/prc_site_mockup_final.html
@@ -721,6 +721,8 @@ function switchTab(id) {
 <div class="vendor-row" data-tier="red" data-name="zy bio peptides"><div class="vendor-name">Zy Bio Peptides</div><span class="vendor-tier" style="color:#EF4444">Red/span><div class="vendor-notes">Website flagged as potentially unsafe</div></div>
 </div>
 </div>
+</div>
+</div>
 
 <div class="tab-content content-shop" id="tc-shop">
 <div class="content-wrap">
