--- a/site.html
+++ b/site.html
@@ -190,7 +190,7 @@ function switchTab(id) {
 <label for="tab-vendors">Vendors</label>
 <label for="tab-shop">Shop</label>
 <label for="tab-learn">Learn</label>
-<label for="tab-contact">Contact</label>
+<label for="tab-contact">About</label>
 </nav>
 </header>
 
@@ -217,7 +217,7 @@ function switchTab(id) {
 <label for="tab-vendors" onclick="switchTab('tab-vendors');return false">Vendors</label>
 <label for="tab-shop" onclick="switchTab('tab-shop');return false">Shop</label>
 <label for="tab-learn" onclick="switchTab('tab-learn');return false">Learn</label>
-<label for="tab-contact" onclick="switchTab('tab-contact');return false">Contact</label>
+<label for="tab-contact" onclick="switchTab('tab-contact');return false">About</label>
 </div>
 
 <div class="tabs-container">
@@ -810,14 +810,23 @@ function switchTab(id) {
 </div>
 
 <div class="tab-content content-contact" id="tc-contact">
-<div class="content-wrap">
-<div class="contact-wrap">
-<h3>Get in Touch</h3>
-<p>Have questions about our research products or need guidance on peptide selection for your laboratory? Our team is here to help.</p>
-<p><a href="mailto:contact@peptideresourcecenter.com">contact@peptideresourcecenter.com</a></p>
-<p><a href="https://www.facebook.com/prcpeptides" target="_blank" rel="noopener">Follow us on Facebook</a></p>
-<div class="contact-disc">All products are intended for research and laboratory use only. Not for human consumption. No medical claims are made or implied. Products have not been evaluated by regulatory agencies for safety or efficacy in humans.</div>
+<div class="content-wrap" style="max-width:700px">
+
+<div style="margin-bottom:32px">
+<h3 style="font-size:1.3rem;font-weight:800;color:#0A1628;margin-bottom:16px">About Peptide Resource Center</h3>
+<p style="font-size:0.88rem;color:#334155;line-height:1.7;margin-bottom:12px">We built this site because navigating the peptide research space shouldn't be overwhelming. With hundreds of vendors, inconsistent quality standards, and scattered information, researchers deserve a single destination that cuts through the noise.</p>
+<p style="font-size:0.88rem;color:#334155;line-height:1.7;margin-bottom:12px">Peptide Resource Center brings everything together — vendor reviews, educational resources, product comparisons, and premium research compounds — so you can focus on what matters most: education, standards, safety, and results.</p>
+<p style="font-size:0.88rem;color:#334155;line-height:1.7;margin-bottom:0">We personally review vendors, test products, and maintain the largest peptide vendor directory available. No gatekeeping. No bias. Just transparent information to help every researcher make informed decisions.</p>
 </div>
+
+<div style="border-top:1px solid #e5e7eb;padding-top:28px">
+<h3 style="font-size:1.1rem;font-weight:700;color:#0A1628;margin-bottom:14px">Get in Touch</h3>
+<p style="font-size:0.85rem;color:#334155;line-height:1.6;margin-bottom:10px">Have questions about our research products, want to update a vendor listing, or interested in partnering with us? We'd love to hear from you.</p>
+<p style="margin-bottom:8px"><a href="mailto:contact@peptideresourcecenter.com" style="color:#2B7DE9;text-decoration:none;font-weight:600">contact@peptideresourcecenter.com</a></p>
+<p><a href="https://www.facebook.com/prcpeptides" target="_blank" rel="noopener" style="color:#2B7DE9;text-decoration:none;font-weight:600">Follow us on Facebook</a></p>
+</div>
+
+<div class="contact-disc" style="margin-top:28px">All products are intended for research and laboratory use only. Not for human consumption. No medical claims are made or implied. Products have not been evaluated by regulatory agencies for safety or efficacy in humans.</div>
 </div>
 </div>
 
@@ -839,7 +848,7 @@ function switchTab(id) {
 <label for="tab-vendors">Vendors</label>
 <label for="tab-shop">Shop</label>
 <label for="tab-learn">Learn</label>
-<label for="tab-contact">Contact</label>
+<label for="tab-contact">About</label>
 </div>
 <div class="footer-disc">All products are intended for research and laboratory use only. Not for human consumption. For research purposes only.</div>
 <div class="footer-copy">&copy; 2026 Peptide Resource Center</div>
