--- a/site.html
+++ b/site.html
@@ -202,7 +202,7 @@ function switchTab(id) {
 <span><strong>44+</strong> Products</span>
 <span><strong>382</strong> Vendors Reviewed</span>
 <span><strong>10</strong> Categories</span>
-<span><strong>&ge;98%</strong> Purity</span>
+<span><strong>Updated</strong> Feb 2026</span>
 </div>
 <div class="hero-btns">
 <label for="tab-resources" class="btn-primary">Explore Resources</label>
