Make affiliate links visually clickable - blue on both tools

--- a/prc_site_mockup_final.html
+++ b/prc_site_mockup_final.html
@@ -83,6 +83,8 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Ar
 .vendor-row:last-child{border-bottom:none}
 .vendor-row:hover{background:#f8f9fa}
 .vendor-name{font-size:0.82rem;font-weight:700;color:#0A1628;line-height:1.2}
+.vendor-name a{color:#2B7DE9;text-decoration:none}
+.vendor-name a:hover{text-decoration:underline}
 .vendor-tier{font-size:0.62rem;font-weight:700;text-transform:uppercase;letter-spacing:0.5px;padding:2px 0}
 .vendor-notes{font-size:0.72rem;color:#64748b;line-height:1.4}
 .vendor-aff{font-size:0.7rem;color:#2B7DE9;font-family:"SF Mono","Fira Code",monospace}
