--- a/site.html
+++ b/site.html
@@ -153,12 +153,12 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 .calc-label{font-size:0.72rem;font-weight:700;color:#475569;text-transform:uppercase;letter-spacing:0.3px}
 .calc-input{padding:10px 12px;border:1.5px solid #d1d5db;border-radius:8px;font-size:0.9rem;font-weight:600;color:#0A1628;background:#fff;font-family:inherit;transition:border-color 0.15s}
 .calc-input:focus{outline:none;border-color:#2B7DE9}
-.calc-results{margin-top:20px;padding:16px;background:#fff;border-radius:10px;border:1.5px solid #e5e7eb}
-.calc-result-row{display:flex;justify-content:space-between;align-items:center;padding:10px 0;border-bottom:1px solid #f0f0f0}
+.calc-results{margin-top:20px;padding:16px;background:#f8f9fa;border-radius:10px;border:1.5px solid #e5e7eb}
+.calc-result-row{display:flex;justify-content:space-between;align-items:baseline;padding:10px 0;border-bottom:1px solid #e5e7eb;gap:12px}
 .calc-result-row:last-child{border-bottom:none}
-.calc-result-label{font-size:0.78rem;color:#475569;font-weight:500}
-.calc-result-value{font-size:1rem;font-weight:800;color:#0A1628}
-.calc-result-value.highlight{color:#2B7DE9;font-size:1.1rem}
+.calc-result-label{font-size:0.78rem;color:#475569;font-weight:500;white-space:nowrap}
+.calc-result-value{font-size:0.95rem;font-weight:800;color:#0A1628;text-align:right}
+.calc-result-value.highlight{color:#2B7DE9;font-size:1rem}
 .calc-note{margin-top:12px;font-size:0.68rem;color:#94a3b8;line-height:1.4;font-style:italic}
 </style>
 <script>
